@@ -66,6 +66,7 @@ Cacti CHANGELOG
 -issue#5446: Duplication functions for Graph/Template and Data Source/Template do not return an id
 -issue#5447: Duplication of Device Templates happens in the base Cacti file and not in an API file
 -issue#5450: Unable to bulk convert to latin1 if desired
+-issue#5451: Reported on the Forums, Graph creation slows over time
 -feature#5375: Add template for Fortinet firewall and Aruba Instant cluster
 -feature#5393: Add template for SNMP printer
 -feature#5418: Display device class before package import 
